SqlServer adaptation and first migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-df431e27-383b-4f29-a787-c42abf2a09b9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=localhost\\SQLEXPRESS;Database=saleswebmvcappdb;User Id=sa;Password=sa;MultipleActiveResultSets=true"
   }
 }
